--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,3 +27,17 @@ body {
     font-weight: 400;
     font-style: normal;
 }
+.header {
+    width: 100%;
+    height: 100vh;
+    color: var(--color-one);
+}
+#bg-hero {
+    background-image: url(../assets/img/desktop/image-hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+.container {
+    max-width: 100rem;
+}
