--- a/src/css/mainSlide.css
+++ b/src/css/mainSlide.css
@@ -37,3 +37,33 @@ img {
     transition: transform 0.3s ease-out;
     cursor: grab;
 }
+.slide {
+    max-width: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+}
+
+@media screen and (min-width: 1200px) {
+    .slide {
+        padding: 3rem;
+    }
+}
+
+.slide img {
+    max-width: 100%;
+    max-height: 100%;
+    transition: transform 0.3s ease-in-out;
+    box-shadow: 5px 5px 50px -1px var(--shadow);
+    border-radius: 4px;
+    user-select: none;
+}
+.grabbing {
+    cursor: pointer;
+}
+.grabbing .slide img {
+    transform: scale(0.9);
+    box-shadow: 5px 5px -1px var(--shadow);
+}
