--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -11,7 +11,7 @@ html {
 
 body {
   margin: 0;
-  padding: 0;
+  padding: 3rem;
   background-color: #101010;
   color: #fff;
   font-family: sans-serif;
@@ -20,17 +20,90 @@ body {
 }
 
 a, a:visited {
-  color: #fff;
+  /*  color: #fff; */
   text-decoration: none;
 }
 
+img {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .card {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -ms-grid-rows: 300px 1fr auto;
+      grid-template-rows: 300px 1fr auto;
   background: #fff;
   border-radius: 10px;
   color: #101010;
 }
 
 .card__image {
-  background-image: url(../assets/img/mobile/image-hero.jpg);
+  background-image: url(../assets/img/mobile/image-interactive.jpg);
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.card__content {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  padding: 1.5rem;
+}
+
+.card__title {
+  font-size: 1.75rem;
+  font-weight: 700;
+  margin-bottom: 0.75rem;
+  line-height: 1.1;
+}
+
+.card__description {
+  font-size: 1rem;
+  line-height: 1.5;
+  font-weight: 600;
+  margin-bottom: 0.75rem;
+}
+
+.card__date {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3 / 4;
+  padding-left: 1.5rem;
+}
+
+.card__readTime {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3 / 4;
+  padding-right: 1.5rem;
+}
+
+.card__date, .card__readTime {
+  font-size: 0.9rem;
+  line-height: 1;
+  padding-bottom: 1.5rem;
 }
 /*# sourceMappingURL=style.css.map */
