--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -32,6 +32,12 @@ img {
      object-fit: cover;
 }
 
+.cards {
+  display: -ms-grid;
+  display: grid;
+  gap: 1rem;
+}
+
 .card {
   display: -ms-grid;
   display: grid;
@@ -42,6 +48,15 @@ img {
   background: #fff;
   border-radius: 10px;
   color: #101010;
+}
+
+@media (min-width: 56rem) {
+  .card {
+    -ms-grid-columns: 300px (1fr)[2];
+        grid-template-columns: 300px repeat(2, 1fr);
+    -ms-grid-rows: 1fr auto;
+        grid-template-rows: 1fr auto;
+  }
 }
 
 .card__image {
@@ -57,6 +72,17 @@ img {
   background-position: center;
 }
 
+@media (min-width: 56rem) {
+  .card__image {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1 / 3;
+  }
+}
+
 .card__content {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
@@ -65,6 +91,17 @@ img {
   -ms-grid-row-span: 1;
   grid-row: 2 / 3;
   padding: 1.5rem;
+}
+
+@media (min-width: 56rem) {
+  .card__content {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-column: 2 / 4;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+  }
 }
 
 .card__title {
@@ -91,6 +128,17 @@ img {
   padding-left: 1.5rem;
 }
 
+@media (min-width: 56rem) {
+  .card__date {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2 / 3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1 / 3;
+  }
+}
+
 .card__readTime {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
@@ -99,6 +147,19 @@ img {
   -ms-grid-row-span: 1;
   grid-row: 3 / 4;
   padding-right: 1.5rem;
+  -ms-grid-column-align: end;
+      justify-self: end;
+}
+
+@media (min-width: 56rem) {
+  .card__readTime {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
+    grid-column: 3 / 4;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+  }
 }
 
 .card__date, .card__readTime {
