--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,6 +24,10 @@ img {
     background-size: cover;
     object-fit: cover;
 }
+.cards {
+    display: grid;
+    gap: 1rem;
+}
 .card {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -32,6 +36,11 @@ img {
     border-radius: 10px;
     color: #101010;
     
+     @media (min-width: 56rem) {
+        grid-template-columns: 300px repeat(2, 1fr);
+        grid-template-rows: 1fr auto;
+    }
+
     &__image {
         background-image: url(../assets/img/mobile/image-interactive.jpg);
         grid-column: 1 / 3;
@@ -39,12 +48,22 @@ img {
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
+        
+        @media (min-width: 56rem) {
+            grid-column: 1 / 2;
+            grid-row: 1 / 3;
+        }
     }
 
     &__content {
         grid-column: 1 / 3;
         grid-row: 2 / 3;
         padding: 1.5rem;
+
+        @media (min-width: 56rem) {
+            grid-column: 2 / 4;
+            grid-row: 1 / 2;
+        }
     }
 
     &__title {
@@ -65,12 +84,23 @@ img {
        grid-column: 1 / 2;
        grid-row: 3 / 4;
        padding-left: 1.5rem;
+
+       @media (min-width: 56rem) {
+        grid-column: 2 / 3;
+        grid-row: 1 / 3;
+    }
     }
 
     &__readTime {
        grid-column: 2 / 3;
        grid-row: 3 / 4;
        padding-right: 1.5rem;
+       justify-self: end;
+
+       @media (min-width: 56rem) {
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+    }
     }
 
     &__date, &__readTime {
