--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -36,6 +36,16 @@ img {
   display: -ms-grid;
   display: grid;
   gap: 1rem;
+  max-width: 1340px;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+@media (min-width: 59em) {
+  .cards {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .card {
@@ -50,13 +60,31 @@ img {
   color: #101010;
 }
 
-@media (min-width: 56rem) {
+@media (min-width: 31.25em) {
   .card {
-    -ms-grid-columns: 300px (1fr)[2];
-        grid-template-columns: 300px repeat(2, 1fr);
+    -ms-grid-columns: 160px (1fr)[2];
+        grid-template-columns: 160px repeat(2, 1fr);
     -ms-grid-rows: 1fr auto;
         grid-template-rows: 1fr auto;
   }
+}
+
+@media (min-width: 50em) {
+  .card {
+    -ms-grid-columns: 300px (1fr)[2];
+        grid-template-columns: 300px repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 59em) {
+  .card {
+    -ms-grid-columns: 160px (1fr)[2];
+        grid-template-columns: 160px repeat(2, 1fr);
+  }
+}
+
+.card__overlay {
+  display: none;
 }
 
 .card__image {
@@ -72,7 +100,7 @@ img {
   background-position: center;
 }
 
-@media (min-width: 56rem) {
+@media (min-width: 31.25em) {
   .card__image {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
@@ -93,7 +121,7 @@ img {
   padding: 1.5rem;
 }
 
-@media (min-width: 56rem) {
+@media (min-width: 31.25em) {
   .card__content {
     -ms-grid-column: 2;
     -ms-grid-column-span: 2;
@@ -128,14 +156,14 @@ img {
   padding-left: 1.5rem;
 }
 
-@media (min-width: 56rem) {
+@media (min-width: 31.25em) {
   .card__date {
     -ms-grid-column: 2;
     -ms-grid-column-span: 1;
     grid-column: 2 / 3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 2;
-    grid-row: 1 / 3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
   }
 }
 
@@ -151,7 +179,7 @@ img {
       justify-self: end;
 }
 
-@media (min-width: 56rem) {
+@media (min-width: 31.25em) {
   .card__readTime {
     -ms-grid-column: 3;
     -ms-grid-column-span: 1;
