--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -27,6 +27,13 @@ img {
 .cards {
     display: grid;
     gap: 1rem;
+    max-width: 1340px;
+    margin: 0 auto;
+    padding: 1rem;
+
+    @media (min-width: 59em){
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 .card {
     display: grid;
@@ -36,9 +43,19 @@ img {
     border-radius: 10px;
     color: #101010;
     
-     @media (min-width: 56rem) {
-        grid-template-columns: 300px repeat(2, 1fr);
+     @media (min-width: 31.25em) {
+        grid-template-columns: 160px repeat(2, 1fr);
         grid-template-rows: 1fr auto;
+    }
+    @media (min-width: 50em ) {
+        grid-template-columns: 300px repeat(2, 1fr);
+    }
+    @media (min-width: 59em){
+        grid-template-columns: 160px repeat(2, 1fr);
+    }
+
+    &__overlay {
+        display: none;
     }
 
     &__image {
@@ -49,7 +66,7 @@ img {
         background-repeat: no-repeat;
         background-position: center;
         
-        @media (min-width: 56rem) {
+        @media (min-width: 31.25em) {
             grid-column: 1 / 2;
             grid-row: 1 / 3;
         }
@@ -60,7 +77,7 @@ img {
         grid-row: 2 / 3;
         padding: 1.5rem;
 
-        @media (min-width: 56rem) {
+        @media (min-width: 31.25em) {
             grid-column: 2 / 4;
             grid-row: 1 / 2;
         }
@@ -85,9 +102,9 @@ img {
        grid-row: 3 / 4;
        padding-left: 1.5rem;
 
-       @media (min-width: 56rem) {
+       @media (min-width: 31.25em) {
         grid-column: 2 / 3;
-        grid-row: 1 / 3;
+        grid-row: 2 / 3;
     }
     }
 
@@ -97,7 +114,7 @@ img {
        padding-right: 1.5rem;
        justify-self: end;
 
-       @media (min-width: 56rem) {
+       @media (min-width: 31.25em) {
         grid-column: 3 / 4;
         grid-row: 2 / 3;
     }
