--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 62.5%;
+  font-size: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -11,25 +11,16 @@ html {
 
 body {
   margin: 0;
-  padding: 3rem;
+  padding: 0;
   background-color: #101010;
-  color: #fff;
-  font-family: sans-serif;
+  color: #ffffff;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
   font-size: 1.25rem;
   line-height: 1.3;
 }
 
 a, a:visited {
-  /*  color: #fff; */
   text-decoration: none;
-}
-
-img {
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .cards {
@@ -55,7 +46,7 @@ img {
       grid-template-columns: repeat(2, 1fr);
   -ms-grid-rows: 300px 1fr auto;
       grid-template-rows: 300px 1fr auto;
-  background: #fff;
+  background: #ffffff;
   border-radius: 10px;
   color: #101010;
 }
@@ -87,17 +78,50 @@ img {
   display: none;
 }
 
+@media (min-width: 59em) {
+  .card__overlay {
+    position: relative;
+    opacity: 0;
+    display: -ms-grid;
+    display: grid;
+    justify-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background: rgba(0, 0, 0, 0.5);
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1 / 4;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1 / 3;
+    -webkit-transition: opacity 200ms ease-in-out;
+    transition: opacity 200ms ease-in-out;
+  }
+}
+
+.card:hover .card__overlay {
+  opacity: 1;
+}
+
+.card__overlay span {
+  display: inline-block;
+  border: 2px solid #ffffff;
+  padding: 1rem 3rem;
+  color: #ffffff;
+  background: rgba(0, 0, 0, 0.5);
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
 .card__image {
-  background-image: url(../assets/img/mobile/image-interactive.jpg);
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1 / 3;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1 / 2;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  background: no-repeat center center/cover;
 }
 
 @media (min-width: 31.25em) {
@@ -134,16 +158,21 @@ img {
 
 .card__title {
   font-size: 1.75rem;
+  line-height: 1.1;
   font-weight: 700;
   margin-bottom: 0.75rem;
-  line-height: 1.1;
 }
 
 .card__description {
   font-size: 1rem;
   line-height: 1.5;
-  font-weight: 600;
   margin-bottom: 0.75rem;
+}
+
+.card__date, .card__readtime {
+  font-size: 0.9rem;
+  line-height: 1;
+  padding-bottom: 1.5rem;
 }
 
 .card__date {
@@ -167,20 +196,20 @@ img {
   }
 }
 
-.card__readTime {
+.card__readtime {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2 / 3;
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
   grid-row: 3 / 4;
-  padding-right: 1.5rem;
   -ms-grid-column-align: end;
       justify-self: end;
+  padding-right: 1.5rem;
 }
 
 @media (min-width: 31.25em) {
-  .card__readTime {
+  .card__readtime {
     -ms-grid-column: 3;
     -ms-grid-column-span: 1;
     grid-column: 3 / 4;
@@ -188,11 +217,5 @@ img {
     -ms-grid-row-span: 1;
     grid-row: 2 / 3;
   }
-}
-
-.card__date, .card__readTime {
-  font-size: 0.9rem;
-  line-height: 1;
-  padding-bottom: 1.5rem;
 }
 /*# sourceMappingURL=style.css.map */
