--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,129 +1,150 @@
 html {
-    font-size: 62.5%;
+    font-size: 100%;
     box-sizing: border-box;
-}
-*,*::before, *::after {
+  }
+  
+  *, *::before, *::after {
     box-sizing: inherit;
-}
-body {
+  }
+  
+  body {
     margin: 0;
-    padding: 3rem;
-    background-color: #101010;
-    color: #fff;
-    font-family: sans-serif;
+    padding: 0;
+    background-color: #101010;  
+    color: #ffffff;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
     font-size: 1.25rem;
     line-height: 1.3;
-}
-a, a:visited {
-   /*  color: #fff; */
+  }
+  
+  a, a:visited {
     text-decoration: none;
-}
-img {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    object-fit: cover;
-}
-.cards {
+  }
+  
+  .cards {
     display: grid;
     gap: 1rem;
     max-width: 1340px;
     margin: 0 auto;
     padding: 1rem;
-
+  
     @media (min-width: 59em){
-        grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(2, 1fr);
     }
-}
-.card {
+  }
+  
+  .card {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 300px 1fr auto;
-    background: #fff;
+    grid-template-rows: 300px 1fr auto;  
+    background: #ffffff;
     border-radius: 10px;
     color: #101010;
-    
-     @media (min-width: 31.25em) {
-        grid-template-columns: 160px repeat(2, 1fr);
-        grid-template-rows: 1fr auto;
+  
+    @media (min-width: 31.25em){
+      grid-template-columns: 160px repeat(2, 1fr);
+      grid-template-rows: 1fr auto;
     }
-    @media (min-width: 50em ) {
-        grid-template-columns: 300px repeat(2, 1fr);
+  
+    @media (min-width: 50em){
+      grid-template-columns: 300px repeat(2, 1fr);
     }
+  
     @media (min-width: 59em){
-        grid-template-columns: 160px repeat(2, 1fr);
+      grid-template-columns: 160px repeat(2, 1fr);
     }
-
+  
     &__overlay {
-        display: none;
-    }
-
-    &__image {
-        background-image: url(../assets/img/mobile/image-interactive.jpg);
-        grid-column: 1 / 3;
-        grid-row: 1 / 2;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        
-        @media (min-width: 31.25em) {
-            grid-column: 1 / 2;
-            grid-row: 1 / 3;
-        }
-    }
-
-    &__content {
-        grid-column: 1 / 3;
-        grid-row: 2 / 3;
-        padding: 1.5rem;
-
-        @media (min-width: 31.25em) {
-            grid-column: 2 / 4;
-            grid-row: 1 / 2;
-        }
-    }
-
-    &__title {
-        font-size: 1.75rem;
+      display: none;
+  
+      @media (min-width: 59em){
+        position: relative;
+        opacity: 0;
+        display: grid;
+        justify-items: center;
+        align-items: center;
+        background: rgba(0,0,0,0.5);
+        grid-column: 1 / 4;
+        grid-row: 1 / 3;
+        transition: opacity 200ms ease-in-out;
+      }
+  
+      .card:hover & {
+        opacity: 1;
+      }
+  
+      span {
+        display: inline-block;
+        border: 2px solid #ffffff;
+        padding: 1rem 3rem;
+        color: #ffffff;
+        background: rgba(0,0,0,0.5);
+        text-transform: uppercase;
         font-weight: 700;
-        margin-bottom: 0.75rem;
-        line-height: 1.1;
+      }
     }
-
+  
+    &__image {
+      grid-column: 1 / 3;
+      grid-row: 1 / 2;
+      background: no-repeat center center/cover;
+  
+      @media (min-width: 31.25em){
+        grid-column: 1 / 2;
+        grid-row: 1 / 3;
+      }
+    }
+  
+    &__content {
+      grid-column: 1 / 3;
+      grid-row: 2 / 3;
+      padding: 1.5rem;
+  
+      @media (min-width: 31.25em){
+        grid-column: 2 / 4;
+        grid-row: 1 / 2;
+      }
+    }
+  
+    &__title {
+      font-size: 1.75rem;
+      line-height: 1.1;
+      font-weight: 700;
+      margin-bottom: 0.75rem;
+    }
+  
     &__description {
-        font-size: 1rem;
-        line-height: 1.5;
-        font-weight: 600;
-        margin-bottom: 0.75rem;
+      font-size: 1rem;
+      line-height: 1.5;
+      margin-bottom: 0.75rem;
     }
-
+  
+    &__date, &__readtime {
+      font-size: 0.9rem;
+      line-height: 1;
+      padding-bottom: 1.5rem;
+    }
+  
     &__date {
-       grid-column: 1 / 2;
-       grid-row: 3 / 4;
-       padding-left: 1.5rem;
-
-       @media (min-width: 31.25em) {
+      grid-column: 1 / 2;
+      grid-row: 3 / 4;
+      padding-left: 1.5rem;
+  
+      @media (min-width: 31.25em){
         grid-column: 2 / 3;
         grid-row: 2 / 3;
+      }
     }
-    }
-
-    &__readTime {
-       grid-column: 2 / 3;
-       grid-row: 3 / 4;
-       padding-right: 1.5rem;
-       justify-self: end;
-
-       @media (min-width: 31.25em) {
+  
+    &__readtime {
+      grid-column: 2 / 3;
+      grid-row: 3 / 4;
+      justify-self: end;
+      padding-right: 1.5rem;
+  
+      @media (min-width: 31.25em){
         grid-column: 3 / 4;
         grid-row: 2 / 3;
+      }
     }
-    }
-
-    &__date, &__readTime {
-        font-size: 0.9rem;
-        line-height: 1;
-        padding-bottom: 1.5rem;
-    }
-
-}
+  }
