--- a/src/css/styleBack.css
+++ b/src/css/styleBack.css
@@ -22,7 +22,7 @@ body {
     color: #fff;
     line-height: 1.5;
 }
-.hero {
+/* .hero {
     position: relative;
     height: 100vh;
     width: 100%;
@@ -42,12 +42,37 @@ body {
     right: 0;
     left: 0;
     bottom: 0;
-   /*  background-color: rgba(152, 66, 211, 0.63); */
-} 
+}  */
+
+
 h1 {
     position: relative;
     color: var(--clr-one);
-    font-size: 14rem;
+    font-size: 7rem;
     line-height: 0.9;
     text-align: center;
 }
+
+/* //Two  */
+
+.hero {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    background-image: url(../assets/img/desktop/image-interactive.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.hero::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(152, 66, 211, 0.75); 
+} 
